[project]
name = "netinfracheck"
version = "1.0.0"
description = "netinfracheck: Infrastructural checks for IP addresses and domain names (ROA, ASPA, DNSSEC...)"
authors = [
    { name = "Alex Semenyaka", email = "alex.semenyaka@gmail.com" },
]
dependencies = []
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
keywords = []
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

#[project.urls]
#Homepage = ""
#Repository = ""
#Issues = ""

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "B", "I"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
